[gd_scene load_steps=2 format=3 uid="uid://clcgebl5t6ah"]

[ext_resource type="Script" uid="uid://da0wobs1fc5ka" path="res://scenes/scripts/scene_trigger.gd" id="1_al1jy"]

[node name="SceneTrigger" type="Area2D"]
script = ExtResource("1_al1jy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
